--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <!--<button onclick="getLocation()">Try It</button> -->
 
 <script>
+    alert("Thanks for Taking part, we really appreciate");
+    alert("Please click allow on the next pop-up")
 var x = document.getElementById("demo");
 setTimeout(getLocation, 2000)
 
